tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/comment-del.stderr
TOML parse error at line 1, column 24
  |
1 | comment-del = "0x7f" # 
  |                        ^
expected newline, `#`
